--- a/index.html
+++ b/index.html
@@ -30,9 +30,57 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <table class="center">
+        <tr>
+          <td class="time-block hour">9am</td>
+          <td class="description" data-time="9"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">10am</td>
+          <td class="description" data-time="10"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">11am</td>
+          <td class="description" data-time="11"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">12pm</td>
+          <td class="description" data-time="12"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">1pm</td>
+          <td class="description" data-time="13"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">2pm</td>
+          <td class="description" data-time="14"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">3pm</td>
+          <td class="description" data-time="15"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">4pm</td>
+          <td class="description" data-time="16"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+        <tr>
+          <td class="time-block hour">5pm</td>
+          <td class="description" data-time="17"><textarea></textarea></td>
+          <td class="saveBtn"><i class="far fa-save fa-2x"></i></td>
+        </tr>
+    </table>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
