final fix- set the table to a column

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <table class="center">
+      <table class="center col-md-12">
         <tr>
           <td class="time-block hour">9am</td>
           <td class="description" data-time="9"><textarea></textarea></td>
